<resources>
    <string name="app_name">vRockk</string>
    <string name="api_key">AIzaSyC0hDNU-QbyXmg4NoenWKOo4thcOKB7YnQ</string>
    <string name="facebook_app_id">314915349711975</string>
    <string name="fb_login_protocol_scheme">fb314915349711975</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="challenges">Challenges</string>
    <string name="me">Me</string>
    <string name="two_point_eight">2.8M</string>
    <string name="following">Following</string>
    <string name="for_you">For You</string>
    <string name="like">Like</string>
    <string name="comments">Comments</string>
    <string name="duet">Duet</string>
    <string name="vrockk">vRockk</string>
    <string name="edit">Edit</string>
    <string name="likes">LIKES</string>
    <string name="followers">Followers</string>
    <string name="suggesstionsforyou">Suggestions for you</string>
    <string name="follow">Follow</string>
    <string name="unfollow">UnFollow</string>
    <string name="back">BACK</string>
    <string name="settings">Settings</string>
    <string name="refertofriend">Refer to Friend</string>
    <string name="redeem_coins">Redeem Coins</string>
    <string name="rewardpoints">Rewards Points</string>
    <string name="block_list">Block list</string>
    <string name="notification">Notifications</string>
    <string name="changepassword">Change Password</string>
    <string name="contactus">Contact Us</string>
    <string name="termsandcondition">Terms and Conditions</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="aboutapp">About App</string>
    <string name="logout">Logout</string>
    <string name="referdesc">Refer vRockk to your friends and let them join in on the adventure. As a reward, you will get extra coins.</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="shareyourcode">"Share your refer code "</string>
    <string name="loyalitypoints">"Loyalty Points "</string>
    <string name="availpoints">"Available loyalty Points worth of $200 "</string>
    <string name="proceedtoredeem">PROCEED FOR REDEEM</string>
    <string name="videolikes">Video like</string>
    <string name="superlikes">Super like</string>
    <string name="share">Share</string>
    <string name="earnthroughreferral">Earned through referrals</string>
    <string name="totalearn">Total Earned</string>
    <string name="totalredeem">Total Redeem</string>
    <string name="availablepoint">Available points</string>
    <string name="feelfreetodropmessage">Feel free to drop us a message!</string>
    <string name="yourname">YOUR NAME</string>
    <string name="enteryourname">Enter Your Name</string>
    <string name="youremail">YOUR EMAIL</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="yourmessage">Your Message</string>
    <string name="currentpassword">CURRENT PASSWORD</string>
    <string name="resetpassword">Reset Password</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enternewpassword">Enter New Password</string>
    <string name="newpassword">NEW PASSWORD</string>
    <string name="confnewpassword">Confirm New Password</string>
    <string name="confnewpasswordcap">CONFIRM NEW PASSWORD</string>
    <string name="save">SAVE</string>
    <string name="name">\@KyleAllen</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="bio">Bio</string>
    <string name="phone">Phone</string>
    <string name="phone_cap">PHONE</string>
    <string name="phone_cap_">*PHONE</string>
    <string name="email">Email</string>
    <string name="instagram">Instagram</string>
    <string name="editcap">EDIT</string>
    <string name="firstnamecap">FIRST NAME</string>
    <string name="lastnamecap">LAST NAME</string>
    <string name="enteryourfirstname">Enter Your First Name</string>
    <string name="enteryourlastname">Enter Your Last Name</string>
    <string name="biocap">BIO</string>
    <string name="enteryourbio">Enter Your Bio</string>
    <string name="emailcap">EMAIL</string>
    <string name="emailcap_">*EMAIL</string>
    <string name="instagramcap">INSTAGRAM</string>
    <string name="enteryourinstagram">Enter Your Instagram</string>
    <string name="update">UPDATE</string>
    <string name="quikpitchstar">\@quikpitchstar</string>
    <string name="hashtag">\@hashtag</string>
    <string name="challengesname">\@Challengesname</string>
    <string name="recommended">Recommended</string>
    <string name="challenges_tags">Challenges Tags</string>
    <string name="post_now">POST NOW</string>
    <string name="offcialmisjk">\@offcialmisjk</string>
    <string name="allen">\@Allen</string>
    <string name="pick_sound">Pick Sound</string>
    <string name="hotsong">Hot Song</string>
    <string name="selectapoint">Select a point to stop recording</string>
    <string name="startcountdown">START COUNTDOWN</string>
    <string name="forgot">FORGOT?</string>
    <string name="enteremail">Enter Email</string>
    <string name="write_here">Write here...</string>
    <string name="alert">Alert</string>
    <string name="pleasegiveallrequiredpermissions">Please allow all required permissions to use our service</string>
    <string name="gotosettings">Go to Settings</string>
    <string name="new_">New</string>
    <string name="resend_code">Resend code</string>
    <string name="gift">Gift</string>
    <string name="report">Report</string>
    <string name="followings">Followings</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="view_profile">View Profile</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="signup_with_phone">SIGNUP WITH PHONE</string>
    <string name="signup_with_email">SIGNUP WITH EMAIL</string>
    <string name="Login">Login</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="offline_check_your_internet">You are offline. Please check your Internet Connection</string>
    <string name="enter_email">Enter Email</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="please_select_date_of_birth">Please select date of birth</string>
    <string name="resend_otp">Resend code</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_bio">Please enter bio</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_referral_code">Please enter Referral code</string>
    <string name="enter_facebook_profile_url">Enter link to your Facebook</string>
    <string name="enter_instagram_url">Enter link to your Instagram</string>
    <string name="enter_youtube_url">Enter link to your Youtube</string>
    <string name="enter_either_phone_or_email">Please enter valid Email or Phone number</string>
    <string name="confrim_password_not_match">Confirm password didn\'t match</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="are_you_sure_you_want_to_disable_your_account">Are you sure you want to disable your account?</string>
    <string name="delete_all_my_contents">Delete all my content</string>
    <string name="delete_post">Are you sure you want to delete this post?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="are_you_sure_you_want_to_discard_video">Are you sure you want to discard video?</string>
    <string name="confirm_you_want_to_send_gift">Are you sure you want to send the gift?</string>
    <string name="msg_you_can_redeem_money_from">You can redeem your money directly to your bank account starting 15 November, 2020 and once you have more than 8000 coins in your wallet.</string>
    <string name="you_need_to_login_first">Please login with your credentials</string>
    <string name="need_to_login_to_access_this">You need to Login to access this Feature.</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="ok">ok</string>
    <string name="yes">Yes</string>
    <string name="login">Login</string>
    <string name="unblock">Unblock</string>
    <string name="you_must_have_eight_characters_in_your_password">You must have 8 characters in your password</string>
    <string name="you_must_have_eight_characters_in_your_current_password">You must have 8 characters in your current password</string>
    <string name="you_must_have_eight_characters_in_your_new_password">You must have 8 characters in your new password</string>
    <string name="you_must_have_eight_characters_in_your_confirm_password">You must have 8 characters in your confirm password</string>
    <string name="you_must_have_eight_characters_in_your_phone">You must have 8 characters in your phone number</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="please_enter_new_password">please enter new password</string>
    <string name="current_password_and_new_password_should_not_be_same">current password and new password should not be same</string>
    <string name="please_select_current_address">Please select location</string>
    <string name="passwords_not_matching">Password and Confirm Password don\'t match</string>
    <string name="please_enter_valid_fb_url">Please enter valid facebook Url</string>
    <string name="please_enter_valid_insta_url">Please enter valid Instagram Url</string>
    <string name="please_enter_valid_yt_url">Please enter valid Youtube Url</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="address">Address</string>
    <string name="gender">GENDER</string>
    <string name="tag">Tag</string>
    <string name="user">User</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="permission_request">This app needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_stop">Play or Stop</string>
    <string name="you_need_to_download_the_media_before_sharing_or_you_can_share_only_links_with_others">You can share only links with others</string>
    <string name="uploading_video">Uploading Video</string>
</resources>