<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".view.settings.ChangePasswordActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/_2e2c37"
        android:fontFamily="@font/roboto_bold"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/resetpassword"
        android:textAlignment="center"
        android:clickable="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/back_button"
        android:fontFamily="@font/roboto_bold"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tvNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/roboto_bold"
        android:paddingHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/newpassword"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_10sdp"
        android:layout_below="@+id/tvBack"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/grey_bg_for_cl"

        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:hint="@string/enternewpassword"
        android:textColorHint="@color/colorWhite"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_10sdp"
        android:layout_below="@+id/tvNewPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/tvConfNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/roboto_bold"
        android:paddingHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/confnewpasswordcap"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_10sdp"
        android:layout_below="@+id/edtNewPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/grey_bg_for_cl"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:hint="@string/confnewpassword"
        android:textColorHint="@color/colorWhite"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_10sdp"
        android:layout_below="@+id/tvConfNewPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:background="@drawable/orange_bg"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/update"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_10sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>