<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpDashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/llVideoUpload"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/color_red"
        android:visibility="gone"
        android:layout_gravity="top">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/videoPlaceholder"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_2sdp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"  />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/tvVideoUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/uploading_video"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvHashTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/flUploadProgress"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="match_parent" >

            <ProgressBar
                android:id="@+id/circularProgressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progressbar_bg"
                android:secondaryProgress="100" />

            <TextView
                android:id="@+id/tvPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0%"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />
        </FrameLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivCreateVideo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="10dp"
        android:visibility="visible" />

    <FrameLayout
        android:id="@+id/llDashboardTabs"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_gravity="bottom"
        android:elevation="@dimen/_5sdp"
        android:background="@drawable/subtraction_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom" >

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/color_red"
                android:textSize="10sp"
                app:drawableTopCompat="@drawable/home" />

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"
                app:drawableTopCompat="@drawable/search_white" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvNotification"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/notification"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"
                app:drawableTopCompat="@drawable/notification" />

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/me"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"
                app:drawableTopCompat="@drawable/profile_white" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/internetInfoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_red"
        android:padding="@dimen/_2sdp"
        android:paddingStart="@dimen/_5sdp"
        android:text="@string/offline_check_your_internet"
        android:textColor="#fff"
        android:gravity="center"
        android:visibility="visible"
        android:layout_gravity="top"
        android:elevation="@dimen/_7sdp"/>

    <View
        android:id="@+id/createVideoView"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@null"
        android:layout_gravity="bottom"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>